k8s/files-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files-service
  template:
    metadata:
      labels:
        app: files-service
    spec:
      containers:
        - name: files-service
          image: gratitudeapp-files-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5004
