k8s/moods-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moods-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: moods-api
  template:
    metadata:
      labels:
        component: moods-api
    spec:
      containers:
        - name: moods-api
          image: gratitudeapp-moods-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
