k8s/moods-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moods-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: moods-service
  template:
    metadata:
      labels:
        component: moods-service
    spec:
      containers:
        - name: moods-service
          image: gratitudeapp-moods-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50052
          livenessProbe:
            tcpSocket:
              port: 50052
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 50052
            initialDelaySeconds: 5
            periodSeconds: 5
