k8s/entries-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entries-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entries
  template:
    metadata:
      labels:
        app: entries
    spec:
      containers:
        - name: entries
          image: gratitudeapp-entries:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
          livenessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: entries-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: entries
  ports:
    - port: 50051
      targetPort: 50051
