k8s/files-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: files-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: files-service
  ports:
    - port: 5004
      targetPort: 5004
