k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: legacy
      port: 5001
      targetPort: 5000
